--- a/t.html
+++ b/t.html
@@ -1,217 +1,173 @@
-<html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Baby Mart EGA
-  </title>
-  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <style>
-   body {
-            font-family: Arial, sans-serif;
-        }
-        .footer {
-            padding: 20px 0;
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chi tiết sản phẩm - Sữa Aptamil Profutura Úc</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
             background-color: #f8f9fa;
         }
-        .footer .logo img {
-            width: 50px;
-            height: 50px;
+
+        .product-title {
+            font-size: 1.8rem;
+            font-weight: bold;
         }
-        .footer .social-icons img {
-            width: 30px;
-            height: 30px;
-            margin-right: 10px;
+
+        .price {
+            font-size: 2rem;
+            color: #d9534f;
+            font-weight: bold;
         }
-        .footer .payment-methods img {
-            width: 50px;
-            height: 30px;
-            margin-right: 10px;
+
+        .discount-badge {
+            background-color: #d9534f;
+            color: white;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 3px;
         }
-        .footer .subscribe-btn {
-            background-color: #ff4081;
+
+        .btn-buy {
+            background-color: #d9534f;
             color: white;
         }
-        .footer .subscribe-btn:hover {
-            background-color: #e91e63;
+
+        .btn-buy:hover {
+            background-color: #c9302c;
         }
-        .footer .contact-info i {
-            margin-right: 5px;
+
+        .product-description img {
+            max-width: 100%;
+            border-radius: 5px;
         }
-        .footer .contact-info a {
-            color: #ff4081;
-            text-decoration: none;
+
+        .sidebar {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        .footer .contact-info a:hover {
-            text-decoration: underline;
+
+        .sidebar h5 {
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-bottom: 15px;
         }
-        .footer .copyright {
-            text-align: center;
-            margin-top: 20px;
+
+        .sidebar .list-group-item {
+            border: none;
+            padding: 10px 0;
         }
-  </style>
- </head>
- <body>
-  <div class="container footer">
-   <div class="row">
-    <div class="col-md-3">
-     <div class="logo">
-      <img alt="Baby Mart Logo" height="50" src="https://storage.googleapis.com/a1aa/image/MdLwuiGffMoW7kfKtxEuQfyzrc2EzabZDB8tRHOcP9Alve5gC.jpg" width="50"/>
-      <span class="h5">
-       Baby Mart
-       <span class="badge bg-info text-dark">
-        EGA
-       </span>
-      </span>
-     </div>
-     <p>
-      Siêu thị Baby Mart EGA
-     </p>
-     <p>
-      Thương hiệu mẹ và bé uy tín và chất lượng, cam kết mang đến những trải nghiệm mua sắm tiện lợi, hiện đại và phong phú
-     </p>
-     <p>
-      Mã số thuế: 12345678999
-     </p>
-     <div class="contact-info">
-      <p>
-       <i class="fas fa-map-marker-alt">
-       </i>
-       Địa chỉ: 70 Lu Gia, District 11, Ho Chi Minh City
-      </p>
-      <p>
-       <i class="fas fa-phone">
-       </i>
-       Hotline:
-       <a href="tel:19006750">
-        19006750
-       </a>
-      </p>
-      <p>
-       <i class="fas fa-envelope">
-       </i>
-       Email:
-       <a href="mailto:support@sapo.vn">
-        support@sapo.vn
-       </a>
-      </p>
-     </div>
-     <div class="social-icons">
-      <img alt="Facebook Icon" height="30" src="https://storage.googleapis.com/a1aa/image/KBsRDdjVKDL1PxWErt0sCT1AX4UOeJTEBV5IzEDr7P7frPHUA.jpg" width="30"/>
-      <img alt="YouTube Icon" height="30" src="https://storage.googleapis.com/a1aa/image/nvqvqbtLqrbeD6IX0KCf2QZ55rrAB5O6oPlMiuGWnRKBsPHUA.jpg" width="30"/>
-      <img alt="TikTok Icon" height="30" src="https://storage.googleapis.com/a1aa/image/dFokUJA8tr4SGV1m659vpdIghGCkPmbASdPlOCfMF3KfrPHUA.jpg" width="30"/>
-      <img alt="Instagram Icon" height="30" src="https://storage.googleapis.com/a1aa/image/EYeSpbvVIzz5eE2AUclfXnccOCrsLOouaeFpbb8EqNFxve5gC.jpg" width="30"/>
-      <img alt="Twitter Icon" height="30" src="https://storage.googleapis.com/a1aa/image/GfLUWIKhNKxsdCoLeM3sKDLImNIQfl8oJM4peUI7995tve5gC.jpg" width="30"/>
-     </div>
+
+        .sidebar .list-group-item img {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+
+        .thumbnail-container img {
+            cursor: pointer;
+        }
+
+        .thumbnail-container img:hover {
+            border: 2px solid #d9534f;
+        }
+    </style>
+</head>
+<body>
+    <div class="container mt-4">
+        <div class="row">
+            <!-- Main Product Details -->
+            <div class="col-md-9">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <!-- Main Product Image -->
+                                <img src="https://placehold.co/300x400" alt="Ảnh sản phẩm Aptamil Profutura" class="img-fluid rounded">
+                                <!-- Thumbnail Images -->
+                                <div class="thumbnail-container d-flex justify-content-between mt-3">
+                                    <img src="https://placehold.co/50x50" alt="Ảnh nhỏ 1" class="img-thumbnail">
+                                    <img src="https://placehold.co/50x50" alt="Ảnh nhỏ 2" class="img-thumbnail">
+                                    <img src="https://placehold.co/50x50" alt="Ảnh nhỏ 3" class="img-thumbnail">
+                                   
+                                </div>
+                            </div>
+                            <div class="col-md-7">
+                                <!-- Product Title and Pricing -->
+                                <h1 class="product-title">Sữa Aptamil Profutura Úc lon bột 900g</h1>
+                                <p class="text-muted">
+                                    Đánh giá:
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star-half-alt text-warning"></i>
+                                    | 100 đánh giá
+                                </p>
+                                <p class="price">750,000đ</p>
+                                <p class="mb-2">
+                                    <span class="discount-badge">BLACK FRIDAY</span>
+                                    <small class="text-muted ms-2">Giảm giá đặc biệt chỉ trong hôm nay!</small>
+                                </p>
+
+                                <!-- Quantity and Action Buttons -->
+                                <div class="d-flex align-items-center mb-3">
+                                    <label for="quantity" class="me-2">Số lượng:</label>
+                                    <input type="number" id="quantity" class="form-control w-25" value="1">
+                                </div>
+                                <button class="btn btn-buy btn-lg mb-3 w-100">MUA NGAY</button>
+                                <button class="btn btn-outline-secondary btn-lg mb-3 w-100">Thêm vào giỏ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Product Description -->
+                <div class="product-description">
+                    <h2>Mô tả sản phẩm</h2>
+                    <p>Sữa Aptamil Úc bột Profutura Synbiotic 900g dành cho trẻ từ 3 tuổi trở lên, được sản xuất với công thức tiên tiến.</p>
+                    <img src="https://placehold.co/800x200" alt="Banner quảng cáo sản phẩm" class="my-3">
+                    <p>Sữa Aptamil Profutura là sản phẩm dinh dưỡng cao cấp, cung cấp đầy đủ dưỡng chất thiết yếu, giúp tăng cường hệ miễn dịch, hỗ trợ tiêu hóa và phát triển trí não.</p>
+                    <button class="btn btn-danger">Xem thêm</button>
+                </div>
+            </div>
+
+            <!-- Sidebar -->
+            <div class="col-md-3">
+                <div class="sidebar">
+                    <h5>Đang giảm giá</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex align-items-center">
+                            <img src="https://placehold.co/50x50" alt="Sản phẩm 1">
+                            <div class="ms-3">
+                                <p class="mb-0">Sản phẩm 1</p>
+                                <p class="text-danger mb-0">500,000đ</p>
+                            </div>
+                        </li>
+                        <li class="list-group-item d-flex align-items-center">
+                            <img src="https://placehold.co/50x50" alt="Sản phẩm 2">
+                            <div class="ms-3">
+                                <p class="mb-0">Sản phẩm 2</p>
+                                <p class="text-danger mb-0">600,000đ</p>
+                            </div>
+                        </li>
+                        <li class="list-group-item d-flex align-items-center">
+                            <img src="https://placehold.co/50x50" alt="Sản phẩm 3">
+                            <div class="ms-3">
+                                <p class="mb-0">Sản phẩm 3</p>
+                                <p class="text-danger mb-0">700,000đ</p>
+                            </div>
+                        </li>
+                        <!-- Add more products as needed -->
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-2">
-     <h5>
-      Hỗ trợ khách hàng
-     </h5>
-     <ul class="list-unstyled">
-      <li>
-       <a href="#">
-        Câu hỏi thường gặp
-       </a>
-      </li>
-      <li>
-       <a href="#">
-        Hệ thống cửa hàng
-       </a>
-      </li>
-      <li>
-       <a href="#">
-        Tìm kiếm
-       </a>
-      </li>
-      <li>
-       <a href="#">
-        Giới thiệu
-       </a>
-      </li>
-      <li>
-       <a href="#">
-        Liên hệ
-       </a>
-      </li>
-      <li>
-       <a href="#">
-        Chương trình cộng tác viên
-       </a>
-      </li>
-     </ul>
-    </div>
-    <div class="col-md-2">
-     <h5>
-      Chính sách
-     </h5>
-     <ul class="list-unstyled">
-      <li>
-       <a href="#">
-        Chính sách đổi trả
-       </a>
-      </li>
-      <li>
-       <a href="#">
-        Chính sách bảo mật
-       </a>
-      </li>
-      <li>
-       <a href="#">
-        Điều khoản dịch vụ
-       </a>
-      </li>
-     </ul>
-     <h5>
-      Tổng đài hỗ trợ
-     </h5>
-     <p>
-      Gọi mua hàng:
-      <a href="tel:19006750">
-       19006750
-      </a>
-      (8h-20h)
-     </p>
-     <p>
-      Gọi bảo hành:
-      <a href="tel:19006750">
-       19006750
-      </a>
-      (8h-20h)
-     </p>
-    </div>
-    <div class="col-md-3">
-     <h5>
-      Đăng ký nhận ưu đãi
-     </h5>
-     <p>
-      Bạn muốn nhận khuyến mãi đặc biệt? Đăng kí tham gia ngay cộng đồng hơn 68.000+ người theo dõi của chúng tôi để cập nhật khuyến mãi ngay lập tức
-     </p>
-     <div class="input-group mb-3">
-      <input class="form-control" placeholder="Email của bạn..." type="email"/>
-      <button class="btn subscribe-btn" type="button">
-       Đăng ký
-      </button>
-     </div>
-     <h5>
-      PHƯƠNG THỨC THANH TOÁN
-     </h5>
-     <div class="payment-methods">
-      <img alt="Visa Icon" height="30" src="https://storage.googleapis.com/a1aa/image/MjwtVTaFbsKeYaySylBKde4yBh9xbhTQpfEN75NB2AL6XfcQB.jpg" width="50"/>
-      <img alt="MasterCard Icon" height="30" src="https://storage.googleapis.com/a1aa/image/BPp8rmSHYf1GZKA9tRXlOeM1iYCJTolgKybQxuP2Wid6rPHUA.jpg" width="50"/>
-      <img alt="MoMo Icon" height="30" src="https://storage.googleapis.com/a1aa/image/cuXncYilEWLDAt9DnjWfVQrb84PgSC7SOJgB1vAsce9DsPHUA.jpg" width="50"/>
-      <img alt="ZaloPay Icon" height="30" src="https://storage.googleapis.com/a1aa/image/0N9RYF0MJU6PPBbtfcllBDuAGo8f05aF0ZcaaDJuJfZFYfcQB.jpg" width="50"/>
-     </div>
-    </div>
-   </div>
-   <div class="row">
-    <div class="col-12">
-     <p class="copyright">
-      © Bản quyền thuộc về EGANY | Cung cấp bởi Sapo
-     </p>
-    </div>
-   </div>
-  </div>
- </body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL
