--- a/t.html
+++ b/t.html
@@ -1,173 +1,143 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi tiết sản phẩm - Sữa Aptamil Profutura Úc</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f8f9fa;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Giỏ Hàng</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    crossorigin="anonymous"
+  />
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
 
-        .product-title {
-            font-size: 1.8rem;
-            font-weight: bold;
-        }
+    .cart-title {
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
 
-        .price {
-            font-size: 2rem;
-            color: #d9534f;
-            font-weight: bold;
-        }
+    .cart-item {
+      border: 1px solid #ddd;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
 
-        .discount-badge {
-            background-color: #d9534f;
-            color: white;
-            font-weight: bold;
-            padding: 5px 10px;
-            border-radius: 3px;
-        }
+    .cart-item img {
+      max-width: 100px;
+    }
 
-        .btn-buy {
-            background-color: #d9534f;
-            color: white;
-        }
+    .item-details {
+      flex: 1; /* Đảm bảo chiếm không gian còn lại */
+      padding-left: 10px;
+    }
 
-        .btn-buy:hover {
-            background-color: #c9302c;
-        }
+    .item-actions {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 10px; /* Khoảng cách giữa các nút */
+    }
 
-        .product-description img {
-            max-width: 100%;
-            border-radius: 5px;
-        }
+    .total-info {
+      text-align: right;
+    }
 
-        .sidebar {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
+    .btn-purchase {
+      width: 100%;
+      background-color: #ddd;
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      font-size: 16px;
+    }
 
-        .sidebar h5 {
-            font-size: 1.2rem;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
+    @media (max-width: 768px) {
+      .cart-item {
+        flex-direction: column; /* Chuyển sang bố cục cột trên màn hình nhỏ */
+        align-items: stretch;
+      }
 
-        .sidebar .list-group-item {
-            border: none;
-            padding: 10px 0;
-        }
+      .item-actions {
+        justify-content: space-between;
+        width: 100%;
+      }
 
-        .sidebar .list-group-item img {
-            width: 50px;
-            height: 50px;
-            object-fit: cover;
-            border-radius: 5px;
-        }
+      .cart-item img {
+        margin-bottom: 10px;
+      }
 
-        .thumbnail-container img {
-            cursor: pointer;
-        }
-
-        .thumbnail-container img:hover {
-            border: 2px solid #d9534f;
-        }
-    </style>
+      .total-info {
+        text-align: left;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container mt-4">
-        <div class="row">
-            <!-- Main Product Details -->
-            <div class="col-md-9">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <!-- Main Product Image -->
-                                <img src="https://placehold.co/300x400" alt="Ảnh sản phẩm Aptamil Profutura" class="img-fluid rounded">
-                                <!-- Thumbnail Images -->
-                                <div class="thumbnail-container d-flex justify-content-between mt-3">
-                                    <img src="https://placehold.co/50x50" alt="Ảnh nhỏ 1" class="img-thumbnail">
-                                    <img src="https://placehold.co/50x50" alt="Ảnh nhỏ 2" class="img-thumbnail">
-                                    <img src="https://placehold.co/50x50" alt="Ảnh nhỏ 3" class="img-thumbnail">
-                                   
-                                </div>
-                            </div>
-                            <div class="col-md-7">
-                                <!-- Product Title and Pricing -->
-                                <h1 class="product-title">Sữa Aptamil Profutura Úc lon bột 900g</h1>
-                                <p class="text-muted">
-                                    Đánh giá:
-                                    <i class="fas fa-star text-warning"></i>
-                                    <i class="fas fa-star text-warning"></i>
-                                    <i class="fas fa-star text-warning"></i>
-                                    <i class="fas fa-star text-warning"></i>
-                                    <i class="fas fa-star-half-alt text-warning"></i>
-                                    | 100 đánh giá
-                                </p>
-                                <p class="price">750,000đ</p>
-                                <p class="mb-2">
-                                    <span class="discount-badge">BLACK FRIDAY</span>
-                                    <small class="text-muted ms-2">Giảm giá đặc biệt chỉ trong hôm nay!</small>
-                                </p>
-
-                                <!-- Quantity and Action Buttons -->
-                                <div class="d-flex align-items-center mb-3">
-                                    <label for="quantity" class="me-2">Số lượng:</label>
-                                    <input type="number" id="quantity" class="form-control w-25" value="1">
-                                </div>
-                                <button class="btn btn-buy btn-lg mb-3 w-100">MUA NGAY</button>
-                                <button class="btn btn-outline-secondary btn-lg mb-3 w-100">Thêm vào giỏ</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product Description -->
-                <div class="product-description">
-                    <h2>Mô tả sản phẩm</h2>
-                    <p>Sữa Aptamil Úc bột Profutura Synbiotic 900g dành cho trẻ từ 3 tuổi trở lên, được sản xuất với công thức tiên tiến.</p>
-                    <img src="https://placehold.co/800x200" alt="Banner quảng cáo sản phẩm" class="my-3">
-                    <p>Sữa Aptamil Profutura là sản phẩm dinh dưỡng cao cấp, cung cấp đầy đủ dưỡng chất thiết yếu, giúp tăng cường hệ miễn dịch, hỗ trợ tiêu hóa và phát triển trí não.</p>
-                    <button class="btn btn-danger">Xem thêm</button>
-                </div>
-            </div>
-
-            <!-- Sidebar -->
-            <div class="col-md-3">
-                <div class="sidebar">
-                    <h5>Đang giảm giá</h5>
-                    <ul class="list-group">
-                        <li class="list-group-item d-flex align-items-center">
-                            <img src="https://placehold.co/50x50" alt="Sản phẩm 1">
-                            <div class="ms-3">
-                                <p class="mb-0">Sản phẩm 1</p>
-                                <p class="text-danger mb-0">500,000đ</p>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex align-items-center">
-                            <img src="https://placehold.co/50x50" alt="Sản phẩm 2">
-                            <div class="ms-3">
-                                <p class="mb-0">Sản phẩm 2</p>
-                                <p class="text-danger mb-0">600,000đ</p>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex align-items-center">
-                            <img src="https://placehold.co/50x50" alt="Sản phẩm 3">
-                            <div class="ms-3">
-                                <p class="mb-0">Sản phẩm 3</p>
-                                <p class="text-danger mb-0">700,000đ</p>
-                            </div>
-                        </li>
-                        <!-- Add more products as needed -->
-                    </ul>
-                </div>
-            </div>
+  <div class="container">
+    <div class="cart-title">Giỏ Hàng</div>
+    <div class="row">
+      <!-- Cột giỏ hàng -->
+      <div class="col-md-8">
+        <div class="cart-item">
+          <div class="d-flex align-items-center mb-3 mb-md-0">
+            <input class="form-check-input me-2" type="checkbox" />
+            <img src="https://placehold.co/100x100" alt="Product" />
+          </div>
+          <div class="item-details">
+            <div>Tên sản phẩm</div>
+            <div>90.000 ₫</div>
+          </div>
+          <div class="item-actions">
+            <button class="btn btn-outline-secondary">-</button>
+            <span>5</span>
+            <button class="btn btn-outline-secondary">+</button>
+            <button class="btn btn-outline-danger">XÓA</button>
+          </div>
         </div>
+      </div>
+
+      <!-- Cột thông tin người dùng -->
+      <div class="col-md-4">
+        <div class="user-info">
+          <div class="mb-3">
+            <label class="form-label" for="name">Họ và tên:</label>
+            <input class="form-control" id="name" type="text" />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="email">Email:</label>
+            <input class="form-control" id="email" type="email" />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="phone">Số điện thoại:</label>
+            <input class="form-control" id="phone" type="text" />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="address">Địa chỉ:</label>
+            <input class="form-control" id="address" type="text" />
+          </div>
+        </div>
+        <div class="total-info mt-4">
+          <div>Subtotal: 450.000 ₫</div>
+          <div>Phí vận chuyển: Miễn phí</div>
+          <div class="total-price">Thành tiền: 450.000 ₫</div>
+          <button class="btn-purchase">MUA HÀNG</button>
+        </div>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL
+  </div>
+</body>
+</html>
